# AegisAV

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.client  Dockerfile.server  INSTALL.bat  INSTALL.sh  PHASE_2_SUMMARY.md  README.md  check_pydantic_ai.py  docker-compose.yml  mkdocs.yml  plan.md  pyproject.toml  run_vision_demo.sh  run_visual_demo.sh  setup_distributed.sh  start_airsim.bat  start_server.sh  start_simulation.sh
agent/: README.md  __init__.py  api_models.py  edge_config.py
agent/client/: __init__.py  action_executor.py  edge_policy.py  feedback.py  main.py  state_collector.py  vision_client.py
agent/server/: __init__.py  advanced_decision.py  airsim_settings.py  airsim_support.py  api_airsim.py  api_chat.py  api_config.py  api_decision.py  api_navigation.py  api_scenarios.py  api_telemetry.py  api_vision.py  auth.py  config_manager.py  dashboard.py  decision.py  deps.py  events.py  feedback_store.py  fleet_bridge.py  goal_selector.py  goals.py  lifecycle.py  llm_config.py  main.py  navigation_map.py  persistence.py  risk_evaluator.py  scenario_runner.py  scenarios.py  state.py  unreal_stream.py  world_model.py
agent/server/critics/: __init__.py  base.py  efficiency_critic.py  goal_alignment_critic.py  orchestrator.py  safety_critic.py
agent/server/models/: __init__.py  audit_models.py  critic_models.py  learning_models.py  outcome_models.py  vision_models.py
agent/server/monitoring/: __init__.py  cost_tracker.py  explanation_agent.py  outcome_tracker.py
agent/server/vision/: __init__.py  detector.py  vision_service.py
autonomy/: __init__.py  autonomous_pipeline.py  flight_backend.py  flight_controller.py  mavlink_interface.py  mission_planner.py  mission_primitives.py  path_planner.py  state_estimator.py  vehicle_state.py
autonomy/backends/: __init__.py  airsim_backend.py  ardupilot_backend.py  mock_backend.py
configs/: aegis_config.development.yaml  aegis_config.production.yaml  aegis_config.real_sensor.yaml  agent_config.alpha.yaml  agent_config.bravo.yaml  agent_config.yaml  airsim_flight.yaml  mission_config.yaml  risk_thresholds.yaml  vision_config.yaml
docs/: AIRSIM_FLIGHT_CONTROL_PLAN.md  AIRSIM_SCENARIO_SYNC.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN_SLAM_SPLATTING.md  INTEGRATION_STATUS.md  MAPPING_COMPLETION_PLAN_ABC.md  MAPPING_REQUIREMENTS.md  OVERLAY_TROUBLESHOOTING.md  REAL_SENSOR_MODE.md  REASONING_FEED_FIX_PLAN.md  SLAM_SPLAT_STACK.md  STYLE_GUIDE.md  THREE_MINUTE_PITCH.md  index.md
docs/guide/: agent-overview.md  decision-pipeline.md  getting-started.md  scenarios.md
docs/operations/: docs-hosting.md  runbook.md
docs/plans/: demo_visualization_plan.md  edge_compute_profiles.md  integrated_simulation_next_steps.md  unreal_demo_integration.md
docs/reference/: api.md  configuration.md  edge-compute.md
examples/: demo_integrated_vision.py  demo_vision_system.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
logs/: README.md
mapping/: __init__.py  benchmark_runner.py  calibrate_camera.py  calibration.py  capture_replay.py  decision_context.py  keyframe_selector.py  manifest.py  map_fusion.py  map_storage.py  map_update.py  obstacle_extraction.py  point_cloud.py  real_capture.py  safety_gates.py  slam_runner.py  splat_change_detection.py  splat_proxy.py  splat_storage.py  splat_trainer.py
metrics/: __init__.py  logger.py  telemetry_logger.py
overlay/: README.md  index.html
scripts/: async_queue_smoke.py  build_blocks_ue5.bat  build_frontend.bat  dev.sh  generate_drone_configs.py  install_airsim.bat  invoke_windows_install.sh  launch_airsim.bat  run_agent.py  run_lightweight_sim.py  run_map_benchmarks.py  run_map_regressions.py  run_sim.sh  run_simulation.py  sim_scenario.py
scripts/installer/: README.md  branding.py  generate_assets.py  setup_gui.py  shortcuts.py
shared/components/: ControlPanel.js  ThoughtBubble.js
shared/styles/: design-tokens.css
sim/: README.md  realistic.params
simulation/: ENVIRONMENTS.md  README.md  UNREAL_SETUP_GUIDE.md  __init__.py  airsim_action_executor.py  airsim_bridge.py  asset_manager.py  capture_mapping.py  coordinate_utils.py  drone_coordinator.py  multi_vehicle_manager.py  realtime_bridge.py  run_simulation.py  setup_assets.py  setup_desktop.sh  sitl_manager.py  validate_setup.py
simulation/lightweight/: __init__.py  bridge.py  demo_recorder.py  physics.py  server.py  simulator.py
tests/: __init__.py  conftest.py  test_advanced_decision.py  test_airsim_flight.py  test_airsim_status.py  test_api_navigation.py  test_auth.py  test_config_manager.py  test_cost_tracking.py  test_critics.py  test_dashboard.py  test_decision.py  test_e2e_smoke.py  test_edge_cases_and_performance.py  test_edge_compute_profiles.py  test_events.py  test_feedback_store.py  test_goal_selector.py  test_goals.py  test_integration_basic.py  test_integration_pipeline.py  test_llm_integration.py  test_map_fusion_storage.py  test_map_safety_gates.py  test_mapping_manifest.py  test_mapping_safety_gates.py  test_mavlink_integration.py  test_navigation_map.py  test_pathfinding_tools.py  test_persistence.py  test_realtime_bridge.py  test_risk_evaluator.py  test_scenario_environment_mapping.py  test_scenario_integrity.py  test_scenario_runner.py  test_scenarios.py  test_server_integration.py  test_splat_proxy.py  test_telemetry_logger.py  test_unreal_scene_broadcast.py  (+2 more)
tests/data/: map_regressions.json
tests/integration/: __init__.py  test_scenario_behavior.py  test_vision_pipeline.py
tests/vision/: __init__.py  test_camera_simulated.py  test_data_models.py  test_image_manager.py  test_vision_service.py
unreal/AegisAVOverlay/: AegisAVOverlay.uplugin  README.md
vision/: README.md  __init__.py  data_models.py  image_manager.py
vision/camera/: __init__.py  base.py  simulated.py
vision/localization/: __init__.py  features.py  pipeline.py  tracking.py  visual_odometry.py
vision/models/: __init__.py  base.py  yolo_detector.py
vision/targets/: __init__.py  detector.py
(+1982 files in other folders)
